fixed spacing and username global

--- a/client_react/src/components/ConversationsSidebar.css
+++ b/client_react/src/components/ConversationsSidebar.css
@@ -24,7 +24,7 @@
 
 .conversation-list-item
 {
-  max-height: 100px;
+  max-height: 105px;
   cursor: pointer;
 }
 
